tests/macros/expand/auto_complete.stderr
error: option `auto_complete` does not exist for kind `expand`
 --> $DIR/auto_complete.rs:3:9
  |
3 |         auto_complete: todo!()
  |         ^^^^^^^^^^^^^
