tests/macros/expand/auto_complete.rs
fn main() {
    discourse::questions![Expand {
        auto_complete: todo!()
    }];
}
